Bug 529328 - Return undefined for out-of-bounds access through nsStringArraySH; r=smaug This patch has no effect on CSSStyleDeclaration, as that never returns a void DOMString.